--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.geekytech.touchable.example">
+    package="com.geekytech.ReTouchable.example">
    <application
         android:label="example"
         android:icon="@mipmap/ic_launcher">
